<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">shape4a</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_newPublisher">Color for new Publisher?</string>
    <string name="dialog_publisherSettings">Publisher #</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_blue">Blue</string>
    <string name="action_green">Green</string>
    <string name="action_red">Red</string>
    <string name="action_black">Black</string>
    <string name="action_yellow">Yellow</string>
    <string name="action_new">New</string>

</resources>
